# meerk40t

./: .codespellignore  .flake8  .gitignore  .isort.cfg  .mypy.ini  .pre-commit-config.yaml  .pylintrc  .travis.yml  About.py  Adjustments.py  Alignment.py  Back.nc  BaseDevice.py  BindAlias.py  Blob.py  BufferView.py  CH341DriverBase.py  CH341LibusbDriver.py  CH341WindllDriver.py  CLAUDE.md  CUTPLAN_HIERARCHICAL_GUIDE.md  CUTPLAN_IMPLEMENTATION_PROPOSAL.md  CUTPLAN_RESTRUCTURING_ANALYSIS.md  CUTPLAN_VISUAL_COMPARISON.md  Camera.py  CameraInteface-New.py  CameraInteface.py  ColorDefine.py  Console.py  Controller.py  CutCode.py  CutPlanner.py  CutProperty.py  DELIVERY_COMPLETE.md  DefaultModules.py  DeviceManager.py  EMBEDDING_COMPLETE.md  EgvParser.py  ElementFunctions.py  ElementProperty.py  (+168 more)
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  ISSUE_TEMPLATE.md  SUPPORT.md  copilot-instructions.md  label-pr.yml  labeler.yml
assets/: tips.txt
docs/: WEEKLY_BUILDS.md
github/: FUNDING.yml
icons/: cut_configure.wxg  meerk40t-BufferView.wxg  meerk40t-design-properties.wxg  meerk40t-job-sender.wxg  meerk40t-job-spool.wxg  meerk40t-job-spooler.wxg  meerk40t-navigate.wxg  meerk40t-preferences.wxg  meerk40t-usbconnect.wxg  meerkat_controller.wxg
locale/: french.mo  french.po  messages.po  messages.pot  tips.txt  uk.mo  uk.po  zulu.mo  zulu.po
meerk40t/: README.md  __init__.py  alignment.py  basedevice.py  bindalias.py  bootstrap.py  bufferview.py  camera.py  camerainteface.py  ch341libusbdriver.py  ch341windlldriver.py  constants.py  controller.py  cutcode.py  cutplanner.py  defaultmodules.py  devicemanager.py  dynamic_plugins.py  dynamic_plugins_build.py  elements.py  external_plugins.py  external_plugins_build.py  grbldevice.py  imageproperty.py  imagetools.py  internal_plugins.py  jobpreview.py  jobspooler.py  kernel.py  kernelserver.py  keymap.py  laseroperation.py  laserrender.py  lhystudiosdevice.py  main.py  meerk40t.py  meerk40t_core.py  modification.py  moshiboarddevice.py  navigation.py  (+19 more)
sefrocut/: README.md  __init__.py  constants.py  internal_plugins.py  main.py
test/: README.MD  bootstrap.py  test_LhymicroWriter.py  test_all_algorithm_paths.py  test_batch_operations_comprehensive.py  test_burns_done_critical_fix.py  test_channel.py  test_cli.py  test_color_cache.py  test_console_set_typed.py  test_core_cutcode.py  test_core_elements.py  test_core_plotplanner.py  test_core_viewports.py  test_cutplan_dispatch.py  test_cutplan_hierarchical.py  test_cutplan_optimization.py  test_cutplan_travel_optimization.py  test_degenerate_points.py  test_drag_drop_optimization.py  test_drivers_galvo.py  test_drivers_grbl.py  test_drivers_lihuiyu.py  test_drivers_moshi.py  test_drivers_newly.py  test_dxf_import.py  test_element_degenerate_points.py  test_elements_cache.py  test_elements_classify.py  test_elements_penbox.py  test_esp3d_upload.py  test_file_svg.py  test_fill.py  test_generation.py  test_geomstr.py  test_geomstr_nodes.py  test_grouped_inner_enhancement.py  test_grouping_logic.py  test_gui_choicepropertypanel.py  test_hatched_geometry_fix.py  (+49 more)
testgui/: README.MD  bootstrap.py  esp3d_emulator.py  mock_context.py  test_gui_choicepropertypanel.py  test_ttf.py  test_virtual_content_edit.py  test_wordlist_helpers.py  test_wordlisteditor.py
tools/: README.md  analyze_wiki_quality.py  benchmark_backup_tree.py  build.sh  build_icon.cmd  build_icon.sh  build_pypi.cmd  build_win.cmd  generate_help_wiki.py  grblsender.py  profile_backup_10k.py
wiki-pages/: Home.md  Online-Help-alignment.md  Online-Help-arrangement.md  Online-Help-autoexec.md  Online-Help-balorconfig.md  Online-Help-balorcontroller.md  Online-Help-baloroperation.md  Online-Help-camera.md  Online-Help-defaultactions.md  Online-Help-devices.md  Online-Help-distribute.md  Online-Help-drag.md  Online-Help-effects.md  Online-Help-formatter.md  Online-Help-grblconfig.md  Online-Help-grblcontoller.md  Online-Help-grblhwconfig.md  Online-Help-grbloperation.md  Online-Help-hatches.md  Online-Help-hinges.md  Online-Help-imageproperty.md  Online-Help-imagesplit.md  Online-Help-jog.md  Online-Help-k40controller.md  Online-Help-k40operation.md  Online-Help-k40tcp.md  Online-Help-kerf.md  Online-Help-keyhole.md  Online-Help-laserpanel.md  Online-Help-magnet.md  Online-Help-materialmanager.md  Online-Help-moshiconfig.md  Online-Help-moshicontroller.md  Online-Help-move.md  (+30 more)
(+1246 files in other folders)
