[metadata]
name = meerk40t
version = 0.7.0-post2
description = MeerK40t LaserCutter Software
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 5 - Production/Stable
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Utilities
keywords = lasercutter, laser, vector, parser
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/meerk40t/meerk40t
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts = meerk40t = meerk40t.main:run
meerk40t.plugins =
    Spooler = meerk40t.basedevice:plugin
    Elemental = meerk40t.elements:plugin
    BindAlias = meerk40t.bindalias:plugin
    Planner = meerk40t.cutplanner:plugin
    ImageTools = meerk40t.imagetools:plugin
    DefaultModules = meerk40t.defaultmodules:plugin
    LhystudiosDevice = meerk40t.lhystudiosdevice:plugin
    MoshiboardDevice = meerk40t.moshiboarddevice:plugin
    GrblDevice = meerk40t.grbldevice:plugin
    RuidaDevice = meerk40t.ruidadevice:plugin