[metadata]
name = meerk40t
version = 0.7.0-post7
description = MeerK40t LaserCutter Software
long_description_content_type=text/markdown
long_description = file: README.md
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Multimedia :: Graphics
    Topic :: Multimedia :: Graphics :: Editors :: Vector-Based
    Topic :: Utilities
keywords = lasercutter, laser, vector, parser
author = Tatarize
author_email = tatarize@gmail.com
url = https://github.com/meerk40t/meerk40t
license = MIT

[options]
zip_safe = True
include_package_data = True
packages = find:
package_dir =
    = .
test_suite =  test

[pep8]
max-line-length=100

[bdist_wheel]
universal=1

[options.entry_points]
console_scripts = meerk40t = meerk40t.main:run
meerk40t.plugins =
    Spooler = meerk40t.device.basedevice:plugin
    Elemental = meerk40t.core.elements:plugin
    BindAlias = meerk40t.core.bindalias:plugin
    Planner = meerk40t.core.cutplanner:plugin
    SVG_IO = meerk40t.core.svg_io:plugin
    DXF_IO = meerk40t.dxf.dxf_io:plugin
    ImageTools = meerk40t.image.imagetools:plugin
    LhystudiosDevice = meerk40t.device.lhystudios.lhystudiosdevice:plugin
    MoshiboardDevice = meerk40t.device.moshi.moshiboarddevice:plugin
    GrblDevice = meerk40t.device.grbl.grbldevice:plugin
    RuidaDevice = meerk40t.device.ruida.ruidadevice:plugin